Improve core Java theory and reference solutions